boulder/tests/error/type/sum_self_ref.bo
# Recursive type `A` has infinite size
# Recursive type `A` has infinite size
# (6:
# (10:

struct A {
    field: B,
}

struct B {
    field: A | u16,
}